feature: starting service unit tests